听指令的小方块1完成！

--- a/听指令的小方块1.html
+++ b/听指令的小方块1.html
@@ -7,9 +7,17 @@
 </head>
 <body>
 	<div id="grids"></div>
+	<div id="control">
+		<input id="code" type="text">
+		<button id="run-code">执行</button>
+	</div>
 </body>
 <style>
 	div{float: left;}
+	#grids{float: none;}
 	.grid{box-sizing: border-box;}
+	#control{
+		margin: 20px 0 0 20px;
+	}
 </style>
 </html>
