--- a/听指令的小方块1.html
+++ b/听指令的小方块1.html
@@ -15,6 +15,9 @@
 <style>
 	div{float: left;}
 	#grids{float: none;}
+	.active{
+		transition: transform 1s;
+	}
 	.grid{box-sizing: border-box;}
 	#control{
 		margin: 20px 0 0 20px;
